# dockerfile-ansible-convert

./: .gitignore  README.md  draft_exception.py  exception.py  log.py  main.py  requirements.txt  setup.cfg  setup.py
1-phase/: in.txt  main.py  prep.sh
ast2playbook/: ansible_stack.py  main.py  match_apt_get.py  match_module.py
ast2playbook/match_module/: apt_get_matcher.py  main.py  match_apt_get.py  module_matcher.py  (+1 more)
bashlex_stat/: main.py  stat_node.py
cli/: main.py
dataset/: bash_sandbox.txt  gold.tar.xz  in.txt  phase_1.json  phase_1.json.mined  source.tar.xz
dev/: migrate_configs.py
docker2ansible/: docker2ansible.py  exception.py  log.py
dockerfile_ansible_convert/: apt_get_matcher.py  bash_parse.py  commands_config.py  dockerfile_ast.py  draft_dockerfile.py  enrich_config.py  example_match.py  generator.py  main.py  module_match.py
phase_1/: in.txt  main.py  prep.sh  process_directive.py
phase_2/: main.py  parse_bashlex.py
phase_3/: enrich.py  main.py
sandbox/: EBM_sandbox.py  bash_sandbox.py  dockerfile_sandbox.py  openstack_sandbox.py  playbook_sandbox.py
scratch/: ansible_test.yml  шпора по bashlex  шпора по модулям  шпора по переменным
scripts/: bash_sandbox.py  dockerfile_sandbox.py  mine_bash.py  pretty.py  sandbox.py
src/: exception.py  log.py
stats/: apt_examples.py  main.py  stat.py  stat_bashlex_node.py
tests/: ansible.cfg  check.sh  instance_utils.py  inventory  inventory.yml  openstack_sandbox.py  playbook_utils.py  prepare_playbooks.py  test_ansible_check.py  test_ubuntu_playbooks.py  utils.py
validation/: main.sh
(+312 files in other folders)
