[metadata]
name = d2a
version = 0.0.1

[options]
python_requires = >=3.7
install_requires =
    dockerfile ==3.2.0
    bashlex ==0.18
    PyYaml ==6.0
    ansible ==7.3.0
    regex ==2022.10.31
include_package_data = True
packages=find:

[options.packages.find]
exclude =
    dev
    tests

[options.package_data]
* = *.json, *.interp, *.tokens

[options.entry_points]
console_scripts =
    d2a = cli.main:main
